# AlphaRPC

./: .gitignore  CMakeLists.txt  Doxyfile
include/: Client.h  Common.h  Constants.h  DataChannel.h  PosixWrapper.h  Server.h  ServerBuilder.h  SocketInternetAddress.h  Types.h
include/ClientService/: ClientService.h
include/Delegator/: Delegate.h
include/Messages/: AddMessageRequest.h  AddMessageResponse.h  MessageTypes.h
include/Networking/: ClientSocket.h  Common.h  DataSocket.h  Endpoint.h  ServerSocket.h  Types.h
src/: Client.cpp  Common.cpp  DataChannel.cpp  MainClient.cpp  MainServer.cpp  PosixWrapper.cpp  ServerBuilder.cpp  client.cpp  server.cpp
src/ClientService/: ClientService.cpp
src/Delegator/: Delegate.cpp
src/Messages/: AddMessageRequest.cpp
src/Networking/: ClientSocket.cpp  Common.cpp  DataSocket.cpp  Endpoint.cpp  ServerSocket.cpp
